Add Words and Topics

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -55,7 +55,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24dp"
-            android:hint="Mật khẩu"/>
+            android:hint="Mật khẩu"
+            android:inputType="textPassword"/>
 
 
         <Button
