--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,8 @@
             android:layout_height="wrap_content"
             android:textSize="36dp"
             android:layout_marginTop="24dp"
-            android:hint="Mật khẩu"/>
+            android:hint="Mật khẩu"
+            android:inputType="textPassword"/>
         <Button
             android:id="@+id/signIn_btn"
             android:layout_width="match_parent"
