--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent ="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+
+
+
     <style name="SignChoosing">
         <item name="android:textSize">40dp</item>
         <item name="android:textColor">#42a5f5</item>
@@ -12,5 +21,20 @@
         <item name="android:textColor">#9d9d9e</item>
         <item name="fontFamily">DOSIS</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TopicTextViewButton">
+        <item name= "android:textSize">36dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="WordName">
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
