--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">DOSIS</item>
         <item name="android:padding">16dp</item>
+        <item name="android:layout_margin">8dp</item>
         <item name="android:gravity">center</item>
     </style>
 
