Add WordList and Word

--- a/app/src/main/res/layout/activity_word.xml
+++ b/app/src/main/res/layout/activity_word.xml
@@ -11,11 +11,29 @@
         android:layout_height="wrap_content"
         style="@style/WordName"
         android:hint="Từ"/>
-    <TextView
-        android:id="@+id/wordCategory"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Từ loại"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="["/>
+        <TextView
+            android:id="@+id/wordCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:hint="Từ loại"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="]"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +42,7 @@
         android:id="@+id/meaning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:hint="Ý nghĩa"/>
 
 </LinearLayout>
