--- a/app/src/main/res/layout/activity_words_list.xml
+++ b/app/src/main/res/layout/activity_words_list.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="8dp">
-
+    tools:context=".activities.WordsListActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp">
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:hint="Nhập tên topic"
+            android:hint="Nhập từ"
             android:textSize="24dp"
             android:layout_weight="1"/>
         <Button
+            android:id="@+id/wordsSearchBtn"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/ic_search"/>
@@ -25,7 +25,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/topic_rv"
+        android:id="@+id/wordsListRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
