--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,8 +33,21 @@
     </style>
 
     <style name="WordName">
-        <item name="android:textSize">24dp</item>
+        <item name="android:textSize">36dp</item>
         <item name="android:textStyle">bold</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="WordCategory">
+        <item name="android:textSize">20dp</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="WordActivityHeader">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24dp</item>
         <item name="fontFamily">DOSIS</item>
         <item name="android:textColor">@color/black</item>
     </style>
