--- a/app/src/main/res/layout/activity_word.xml
+++ b/app/src/main/res/layout/activity_word.xml
@@ -1,48 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="16dp" >
-    <TextView
-        android:id="@+id/wordName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/WordName"
-        android:hint="Từ"/>
+    android:layout_margin="16dp"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/wordName"
+            style="@style/WordName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="["/>
+            android:layout_weight="1"
+            android:hint="Từ" />
+
+        <Button
+            android:id="@+id/addToNoteBookBtn"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_add" />
+
+        <TextView
+            android:id="@+id/alreadyAddedTv"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_added"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/WordCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[" />
+
         <TextView
             android:id="@+id/wordCategory"
+            style="@style/WordCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:hint="Từ loại"/>
+            android:hint="Từ loại" />
+
         <TextView
+            style="@style/WordCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="]"/>
+            android:text="]" />
     </LinearLayout>
 
     <TextView
+        style="@style/WordActivityHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nghĩa:"/>
+        android:text="Nghĩa:" />
+
     <TextView
         android:id="@+id/meaning"
+        style="@style/WordCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:hint="Ý nghĩa"/>
+        android:layout_marginBottom="16dp"
+        android:hint="Ý nghĩa" />
+
+    <TextView
+        style="@style/WordActivityHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ví dụ:" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/exampleRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp" />
+
 
 </LinearLayout>
