--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -64,4 +64,9 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/logOutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Đăng xuất"/>
 </LinearLayout>
