--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="topicBtn2">#ffc052</color>
     <color name="topicBtn3">#ff7752</color>
 
-    <color name="rightAnswer">#42f578</color>
+    <color name="rightAnswer">#00c911</color>
     <color name="wrongAnswer">#f23a3a</color>
+
+    <color name="score">#f23a3a</color>
 </resources>
