--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="24dp"
         android:orientation="vertical">
         <TextView
@@ -26,17 +27,25 @@
             android:text="Đăng ký"
             style="@style/SignUnChoosing"/>
     </LinearLayout>
+    <ImageView
+        android:layout_marginVertical="20dp"
+
+        android:layout_gravity="center"
+        android:layout_width="270dp"
+        android:layout_height="240dp"
+        android:background="@drawable/logo"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="36dp">
+        android:layout_marginHorizontal= "36dp">
 
         <EditText
             android:id="@+id/username_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36dp"
+            android:inputType="text"
             android:hint="Tên đăng nhập"/>
 
         <EditText
